--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,21 +5,28 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="11"
+        android:minSdkVersion="19"
         android:targetSdkVersion="21" />
 
     <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/varramie_launcher_icon_trans"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+
+        <service android:name=".UDP" />
+
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,10 +37,10 @@
         <activity
             android:name=".EmptyActivity"
             android:label="@string/title_activity_empty" 
-            android:parentActivityName="com.example.myfirstapp.MainActivity">
+            android:parentActivityName="com.spots.varramie.MainActivity">
             <meta-data
             	android:name="android.support.PARENT_ACTIVITY"
-            	android:value="com.example.myfirstapp.MainActivity" />
+            	android:value="com.spots.varramie.MainActivity" />
         </activity>
     </application>
 
