--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spots.varramie"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionCode="4"
+    android:versionName="1.2.1" >
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -14,6 +14,14 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+    <!-- Tell the system this app requires OpenGL ES 2.0. -->
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+
+    <!-- Tell the system this app requires OpenGL ES 3.0. -->
+    <!--<uses-feature android:glEsVersion="0x00030000" android:required="true" /> -->
+    <!-- Tell the system this app requires OpenGL ES 3.1. -->
+    <!--<uses-feature android:glEsVersion="0x00030001" android:required="true" /> -->
 
     <application
         android:allowBackup="true"
