--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spots.varramie"
-    android:versionCode="4"
-    android:versionName="1.2.1" >
+    android:versionCode="9"
+    android:versionName="1.3.5" >
 
     <uses-sdk
         android:minSdkVersion="19"
@@ -11,44 +11,53 @@
     <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <!-- Tell the system this app requires OpenGL ES 2.0. -->
-    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
-    <!-- Tell the system this app requires OpenGL ES 3.0. -->
-    <!--<uses-feature android:glEsVersion="0x00030000" android:required="true" /> -->
+    <android:uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Tell the system this app requires OpenGL ES 3.0. -->
+    <!-- <uses-feature android:glEsVersion="0x00030000" android:required="true" /> -->
     <!-- Tell the system this app requires OpenGL ES 3.1. -->
-    <!--<uses-feature android:glEsVersion="0x00030001" android:required="true" /> -->
-
+    <!-- <uses-feature android:glEsVersion="0x00030001" android:required="true" /> -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/varramie_launcher_icon_trans"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
-
+        android:theme="@style/AppTheme" >
         <service android:name=".UDP" />
 
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:configChanges="orientation|screenSize">
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.main" />
+
+                <category android:name="android.intent.category.HOME" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".EmptyActivity"
-            android:label="@string/title_activity_empty" 
-            android:parentActivityName="com.spots.varramie.MainActivity">
+            android:label="@string/title_activity_empty"
+            android:parentActivityName=".MainActivity" >
             <meta-data
-            	android:name="android.support.PARENT_ACTIVITY"
-            	android:value="com.spots.varramie.MainActivity" />
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.spots.varramie.MainActivity" />
         </activity>
     </application>
 
